--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <span class="logo-icon"><img src="imagens/logo.png" alt=""></span>
+                    <span class="logo-icon"><img src="logo.png" alt=""></span>
                     <h1>Casa Terapeutica Corpo e Mente</h1>
                 </div>
                 <nav>
