--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         /* Header */
         header {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+           background-image: linear-gradient(to bottom, rgb(2, 2, 46), blue);
             color: white;
             padding: 20px 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
