--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         /* Header */
         header {
-           background-image: linear-gradient(to bottom, rgb(2, 2, 46), blue);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
             color: white;
             padding: 20px 0;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -380,7 +380,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <span class="logo-icon"><img src="logo.png" alt=""></span>
+                    <span class="logo-icon"><img src="imagens/logo.png" alt=""></span>
                     <h1>Casa Terapeutica Corpo e Mente</h1>
                 </div>
                 <nav>
