--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         
         body {
-            background-color: #f8f9fa;
+            background-color: #0076ec;
             color: #333;
             line-height: 1.6;
         }
@@ -28,8 +28,8 @@
         
         /* Cores para comunidade terapêutica */
         :root {
-            --primary: #2c7873; /* Verde terapeutico - transmite calma e equilíbrio */
-            --secondary: #6fb98f; /* Verde mais claro - renascimento */
+            --primary: #03070D; /* Verde terapeutico - transmite calma e equilíbrio */
+            --secondary: #03070D; /* Verde mais claro - renascimento */
             --accent: #ff9a3d; /* Laranja suave - energia positiva */
             --light: #f8f9fa; /* Fundo claro */
             --dark: #2c3e50; /* Texto escuro */
