--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         
         /* Cores para comunidade terapêutica */
         :root {
-            --primary: #03070D; /* Verde terapeutico - transmite calma e equilíbrio */
-            --secondary: #03070D; /* Verde mais claro - renascimento */
+            --primary: #2b5ca7; /* Verde terapeutico - transmite calma e equilíbrio */
+            --secondary: #2e62b1; /* Verde mais claro - renascimento */
             --accent: #ff9a3d; /* Laranja suave - energia positiva */
             --light: #f8f9fa; /* Fundo claro */
             --dark: #2c3e50; /* Texto escuro */
