--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         /* Cores para comunidade terapêutica */
         :root {
-            --primary: #05C7F2; /* Verde terapeutico - transmite calma e equilíbrio */
+            --primary: #7cb9dd; /* Verde terapeutico - transmite calma e equilíbrio */
             --secondary: #05C7F2; /* Verde mais claro - renascimento */
             --accent: #ff9a3d; /* Laranja suave - energia positiva */
             --light: #f8f9fa; /* Fundo claro */
@@ -88,7 +88,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(44, 120, 115, 0.8), rgba(44, 120, 115, 0.8)), url('https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background: linear-gradient(#03070D), rgba(#03070D), url('https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
             background-size: cover;
             background-position: center;
             color: white;
