--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         
         /* Cores para comunidade terapêutica */
         :root {
-            --primary: #3283b6; /* Verde terapeutico - transmite calma e equilíbrio */
-            --secondary: #15424d; /* Verde mais claro - renascimento */
+            --primary: #3267b6; /* Verde terapeutico - transmite calma e equilíbrio */
+            --secondary: #1d66d3; /* Verde mais claro - renascimento */
             --accent: #ff9a3d; /* Laranja suave - energia positiva */
             --light: #f8f9fa; /* Fundo claro */
             --dark: #2c3e50; /* Texto escuro */
