--- a/index.html
+++ b/index.html
@@ -374,6 +374,27 @@
         }
     </style>
 </head>
+<a href="https://wa.me/559193832745" class="whatsapp-float" target="_blank">
+    <img src="imagens/zpp.png"alt="WhatsApp">
+</a>
+
+<style>
+.whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background: #25D366;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    z-index: 1000;
+    animation: pulse 2s infinite;
+}
+</style>
 <body>
     <!-- Header -->
     <header>
