--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     </style>
 </head>
 <a href="https://wa.me/559193832745" class="whatsapp-float" target="_blank">
-    <img src="imagens/zpp.png"alt="WhatsApp">
+    <img src="imagens/zpp2.png"alt="WhatsApp">
 </a>
 
 <style>
