--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="header-content">
                 <div class="logo">
                     <span class="logo-icon"><img src="imagens/logo.png" alt=""></span>
-                    <h1>Casa Terapeutica Corpo e Mente</h1>
+                    <h1>Casa Terapêutica Corpo e Mente</h1>
                 </div>
                 <nav>
                     <ul>
