--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="testimonial-card">
                     <p class="testimonial-text">"Cheguei aqui sem esperança, mas encontrei uma nova família. As terapias em grupo foram fundamentais para entender que não estava sozinho. Hoje tenho ferramentas para enfrentar a vida sem substâncias."</p>
-                    <p class="testimonial-author">- Maria S., 42 anos</p>
+                    <p class="testimonial-author">- Flavio S., 42 anos</p>
                 </div>
                 <div class="testimonial-card">
                     <p class="testimonial-text">"Como familiar de um dependente químico, posso dizer que o apoio recebido foi essencial. Aprendemos a lidar com a situação de forma saudável e hoje nossa família está mais unida do que nunca."</p>
@@ -143,7 +143,7 @@
                     <h3>Informações de Contato</h3>
                     <div class="contact-item">
                         <span class="contact-icon">📞</span>
-                        <p>(91) 9 9383-2745 | (91) 9 8021-8998 (WhatsApp)</p>
+                        <p>(91) 9 9383-2745 | (91) 9 8021-8998 (WhatsApp) <br> Robson <br>Técnico em dependência Química, <br> Terapeuta Psicanalista.</p>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon">📧</span>
